--- a/deploy.conf
+++ b/deploy.conf
@@ -1,7 +1,7 @@
 [linode]
 user javierarce
 host 178.79.161.115
-repo git@javierarce.com:omg_movies
+repo git@javierarce.com:omg_movies.git
 ref origin/master
 path /home/javierarce/omg_movies
 ## post-deploy forever start --spinSleepTime 10000 /home/javierarce/omg_movies/current/app.js&
