--- a/deploy.conf
+++ b/deploy.conf
@@ -6,3 +6,19 @@ ref origin/master
 path /home/javierarce/omg_movies
 ## post-deploy forever start --spinSleepTime 10000 /home/javierarce/omg_movies/current/app.js&
 ## test sleep 1 && curl localhost >/dev/null
+
+[gold]
+user javier
+host 146.185.173.162
+repo git@javierarce.com:omg_movies.git
+ref origin/master
+path /home/javier/omg_movies
+## post-deploy forever start --spinSleepTime 10000 /home/javier/omg_movies/current/app.js&
+## test sleep 1 && curl localhost >/dev/null
+
+[yay]
+user javier
+host 137.74.166.102
+repo git@github.com:omg_movies.git
+ref origin/master
+path /home/javier/omg_movies
