--- a/deploy.conf
+++ b/deploy.conf
@@ -19,6 +19,6 @@ path /home/javier/omg_movies
 [yay]
 user javier
 host 137.74.166.102
-repo git@github.com:omg_movies.git
+repo git@github.com:javierarce/omg_movies.git
 ref origin/master
 path /home/javier/omg_movies
