--- a/package.json
+++ b/package.json
@@ -1,60 +1,32 @@
 {
-  "name": "bot",
-  "description": "Twitter Bot template",
-  "version": "0.1.0",
-  "homepage": "https://github.com/javierarce/bot",
-  "author": {
-    "name": "Javier Arce",
-    "email": "javierarce@gmail.com",
-    "url": "http://javierarce.com"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/javierarce/bot.git"
-  },
-  "bugs": {
-    "url": "https://github.com/javierarce/bot/issues"
-  },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/javierarce/bot/blob/master/LICENSE-MIT"
-    }
-  ],
+  "//1": "describes your app and its dependencies",
+  "//2": "https://docs.npmjs.com/files/package.json",
+  "//3": "updating this file will download and update your packages",
+  "name": "hello-express",
+  "version": "0.0.1",
+  "description": "A simple Node app built on Express, instantly up and running.",
+  "main": "server.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha -b test -u tdd  -R spec"
-  },
-  "engines": {
-    "node": "0.10.33",
-    "npm": "2.1.10"
+    "start": "node server.js"
   },
   "dependencies": {
-    "cli-color": "1.0.0",
-    "inflection": "~1.2.6",
-    "pos": "0.1.7-1",
-    "redis": "^0.12.1",
-    "q": "1.4.1",
-    "wordnik-bb": "0.1.1",
-    "wordfilter": "0.2.1",
-    "request": "latest",
-    "twit": "~1.1.9",
-    "rita": "^1.1.12",
-    "underscore": "latest",
-    "utf8": "latest",
-    "unique-random": "^1.0.0"
+    "express": "^4.16.4",
+    "underscore": "^1.9.1",
+    "unique-random": "^2.0.0",
+    "twit": "^2.2.11",
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3"
   },
-  "devDependencies": {
-    "grunt-contrib-jshint": "~0.6.0",
-    "grunt-contrib-nodeunit": "~0.2.0",
-    "grunt-contrib-watch": "~0.5.0",
-    "grunt-mocha-test": "~0.7.0",
-    "jshint-stylish": "~0.1.3",
-    "load-grunt-tasks": "~0.2.0",
-    "mocha": "~1.17.1",
-    "time-grunt": "~0.1.1"
+  "engines": {
+    "node": "8.x"
   },
+  "repository": {
+    "url": "https://glitch.com/edit/#!/hello-express"
+  },
+  "license": "MIT",
   "keywords": [
-    "bot",
-    "template"
+    "node",
+    "glitch",
+    "express"
   ]
 }
